hub page now updates based on partner question

--- a/app/views/lis/8/save-continue/ref.html
+++ b/app/views/lis/8/save-continue/ref.html
@@ -31,9 +31,8 @@
             <div class="form-group">
               <label class="form-label-bold" for="email">
                 Email address (optional)
-                <span class="form-hint">Enter your email address and we will email a copy of your registration number.</span>
-
               </label>
+              <p>Enter your email address and we will email a copy of your registration number.</p>
               <input type="text" id="email" name="email" class="form-control">
             </div>
           </fieldset>
