--- a/app/views/lis/8/lis-home.html
+++ b/app/views/lis/8/lis-home.html
@@ -31,10 +31,10 @@
             <td><span id="property_status" class="notstarted-text">{{propertyStatus}}</span> 
             <a href="assets/property">{{propertyLink}}</a></td>
           </tr>
-          <tr class='clickable-row' data-href='live/hospital'>
+          <tr class='clickable-row' data-href='live/you-live'>
             <td>About where you live</td>
             <td><span id="where_you_live_status" class="notstarted-text">{{whereYouLiveStatus}}</span> 
-            <a href="live/hospital">{{whereYouLiveLink}}</a></td>
+            <a href="live/you-live">{{whereYouLiveLink}}</a></td>
           </tr>
         </table>
     
