--- a/app/views/lis/8/partner/basic.html
+++ b/app/views/lis/8/partner/basic.html
@@ -44,7 +44,7 @@
 
     {{
       form_macros.button({
-        href: 'care-home',
+        href: 'work',
         label: 'Save and continue'
       })
     }}
