--- a/app/views/lis/8/sc/authority-assessed.html
+++ b/app/views/lis/8/sc/authority-assessed.html
@@ -38,8 +38,7 @@
           {{
             form_macros.text_field({
               id: 'local-authority',
-              hint: 'Local authority',
-              label: 'Please tell us which local authority helps you'
+              label: 'What is the name of your local council?'
             })
           }}
 
