--- a/app/views/lis/8/you/benefits/dla.html
+++ b/app/views/lis/8/you/benefits/dla.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Do you receive the care component of disability living allowance?
+    Do you get the care component of Disability Living Allowance?
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
@@ -43,19 +43,19 @@
           <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Low rate
+              Low rate (£21.80)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="middle" name="contact">
             <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Middle rate
+              Middle rate (£55.10)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="high" name="contact">
             <label class="form-control-radio js-toggle" for="high" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              High rate
+              High rate (£82.30)
             </label>
           </div>
 
