--- a/app/views/lis/8/you/pension/employment-pension-amount.html
+++ b/app/views/lis/8/you/pension/employment-pension-amount.html
@@ -13,11 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    About your employment pension
+    How often do you get your workplace pension payments?
   </h1>
-  
-  <h2 class="heading-medium">How often do you receive your employment pension payments?</h2>
-  
+    
   <form action="ep-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
