--- a/app/views/lis/8/you/pension/pension-amount.html
+++ b/app/views/lis/8/you/pension/pension-amount.html
@@ -14,10 +14,8 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        About your state pension
+       How often do you get your State Pension?
       </h1>
-  
-      <h2 class="heading-medium">How often do you receive your state pension payments?</h2>
   
       <form action="sp-handler" method="get" class="form">
 
