--- a/app/views/lis/8/you/pension/pension-credit.html
+++ b/app/views/lis/8/you/pension/pension-credit.html
@@ -13,10 +13,12 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Do you receive Pension Credit Savings Credit?
-    <span class="form-hint">This is a pension top up of up to £13.07 per week (for single people) or up to £14.75 (for couples).</span>
+      Do you get Pension Credit Savings Credit?
   </h1>
 
+    <p>This is an extra payment for people who saved some money towards their
+retirement. It is up to £13.07 (for single people) or £14.75 (for couples) a week.</p>
+      
   <form action="pencred-handler6" method="get" class="form">
     <div class="form-item-wrapper">     
       <div class="inline-form-groups">
