--- a/app/views/lis/8/you/pension/war-widow-pension.html
+++ b/app/views/lis/8/you/pension/war-widow-pension.html
@@ -14,11 +14,9 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        About your war widow pension
+        How often do you get your War Widow’s or Widower’s Pension?
       </h1>
-  
-      <h2 class="heading-medium">How often do you receive your war widow pension payments?</h2>
-  
+    
       <form action="war-pension-handler" method="get" class="form">
 
       <div class="form-item-wrapper">
