--- a/app/views/lis/8/you/work.html
+++ b/app/views/lis/8/you/work.html
@@ -16,7 +16,13 @@
         Do you have a job?
       </h1>
       
-      <p class="form-hint">Include work for an employer, self employed work, and paid voluntary or charity work.</p>
+      <p>You have a job if you:</p>
+
+      <ul class="list list-bullet">
+        <li>work for an employer</li>
+        <li>are selfemployed</li>
+        <li>get paid for voluntary or charity work</li>
+      </ul>
       
       <form action="" method="get" class="form">
           <div class="form-item-wrapper">
