--- a/app/views/lis/8/you/benefits/benefit-sprint3.html
+++ b/app/views/lis/8/you/benefits/benefit-sprint3.html
@@ -13,65 +13,65 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Do you receive any of the following?
+      Do you get any of these benefits?
   </h1>
-  <p>Tick all that apply</p>
+  <p>Select all the benefits you get.</p>
 
   <form action="sprint3-benefit-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
         <input type="checkbox" id="af" value="af" name="sprint3benefits">
         <label class="form-control-checkbox" for="af">
-          Armed forces independence payment 
+          Armed Forces Independence Payment 
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="aa" value="aa" name="sprint3benefits">
         <label class="form-control-checkbox" for="aa">
-          Attendance allowance
+          Attendance Allowance
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="ca" value="ca" name="sprint3benefits">
         <label class="form-control-checkbox" for="ca">
-          Carers allowance
+          Carers Allowance
         </label>
       </div> 
       <div class="form-group">
         <input type="checkbox" id="ctc" value="ctc" name="sprint3benefits">
         <label class="form-control-checkbox" for="ctc">
-         Child tax credits
+         Child Tax Credits
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="dla" value="dla" name="sprint3benefits">
         <label class="form-control-checkbox" for="dla">
-          Disability living allowance
+          Disability Living Allowance
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="iid" value="iid" name="sprint3benefits">
         <label class="form-control-checkbox" for="iid">
-          Industrial injuries disablement benefit
+          Industrial Injuries Disablement Benefit
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="mp" value="mp" name="sprint3benefits">
         <label class="form-control-checkbox" for="mp">
-         Maintenance payments
+         Maintenance Payments
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="pip" value="pip" name="sprint3benefits">
         <label class="form-control-checkbox" for="pip">
-         Personal independence payment
+         Personal Independence Payment
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
         <input type="checkbox" id="none" value="none" name="sprint3benefits">
         <label class="form-control-checkbox" for="none">
-          I do not receive any of these
+          I <span class="bold">do not</span> get any of these
         </label>
       </div>
     </div>
