--- a/app/views/lis/8/you/benefits/pip.html
+++ b/app/views/lis/8/you/benefits/pip.html
@@ -12,8 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Does your personal independence payment include the daily living component?
-  </h1>
+Do you get the daily living component of Personal Independence Payment?  </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
