--- a/app/views/lis/8/you/contact-prefs.html
+++ b/app/views/lis/8/you/contact-prefs.html
@@ -40,7 +40,7 @@
         <div class="form-group">
           <input type="radio" id="none" name="contact" value="none">
           <label class="form-control-radio minor-radio" for="none">
-            I do not have access to an email address or a telephone
+            I do not have an email address or a telephone
           </label>
         </div>
         <div class="form-group">
