--- a/app/views/lis/8/you/pension/pension-type.html
+++ b/app/views/lis/8/you/pension/pension-type.html
@@ -13,9 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Which of the following pensions do you receive?
+    Which type of pensions do you get?
   </h1>
-  <p>Tick all that apply</p>
+  <p>Select all the pensions you get.</p>
 
   <form action="pension-type-handler" method="get" class="form">
 
@@ -35,7 +35,7 @@
       <div class="form-group">
         <input type="checkbox" id="employment" value="employment" name="pensiontype">
         <label class="form-control-checkbox" for="employment">
-          Pension from employment
+          Workplace pension
         </label>
       </div>
       <div class="form-group">
@@ -47,7 +47,7 @@
       <div class="form-group">
         <input type="checkbox" id="warwidow" value="warwidow" name="pensiontype">
         <label class="form-control-checkbox" for="warwidow">
-          War widow’s pension
+          War Widow’s Pension or War Widower’s Pension
         </label>
       </div>
     </div>  
