--- a/app/views/lis/8/you/pension/private-pension-amount.html
+++ b/app/views/lis/8/you/pension/private-pension-amount.html
@@ -13,10 +13,8 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    About your private pension
+    How often do you get your private pension payments?
   </h1>
-  
-  <h2 class="heading-medium">How often do you receive your private pension payments?</h2>
   
   <form action="pp-handler" method="get" class="form">
 
