--- a/app/views/lis/8/you/pension/war-pension.html
+++ b/app/views/lis/8/you/pension/war-pension.html
@@ -14,11 +14,9 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        About your war disablement pension
+        How often do you get your War Disablement Pension?
       </h1>
-  
-      <h2 class="heading-medium">How often do you receive your war disablement pension payments?</h2>
-  
+      
       <form action="wp-handler" method="get" class="form">
 
       <div class="form-item-wrapper">
