--- a/app/views/lis/8/you/registration.html
+++ b/app/views/lis/8/you/registration.html
@@ -11,14 +11,11 @@
     
   <div class="grid-row">
     <div class="column-two-thirds">
-
-  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
-
   <h1 class="heading-large">
-    About you
+    What is your name?
   </h1>
 
-  <form action="registration-handler" method="get" class="form">
+  <form action="name-handler" method="get" class="form">
 
     {{
       form_macros.text_field({
@@ -34,28 +31,7 @@
       })
     }}
 
-    <div class="form-item-wrapper">
-        <fieldset>
-          <legend class="form-label-bold">
-            Date of birth
-          </legend>
-          <p class="form-hint">For example 31 7 1961</p>
-          <div class="inline-form-groups">
-            <div class="form-group">
-              <label class="form-label" for="day">Day</label>
-              <input class="form-control form-control-2-chars" id="day" value="day" name="day"  type="number" min="0" max="31">
-            </div>
-            <div class="form-group">
-              <label class="form-label" for="month">Month</label>
-              <input class="form-control form-control-2-chars" id="month" value="month" name="month"  type="number" min="0" max="12">
-            </div>
-            <div class="form-group">
-              <label class="form-label" for="year">Year</label>
-              <input class="form-control form-control-4-chars" id="year" value="year" name="year" type="number" min="0">
-            </div>
-          </div>
-        </fieldset>
-      </div>
+    
 
     {{
       form_macros.button({
