--- a/app/views/lis/8/assets/value.html
+++ b/app/views/lis/8/assets/value.html
@@ -14,7 +14,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        What is the value of the property or land?
+        How much is the property or land worth?
       </h1>
       
       <form action="" method="get" class="form">
