--- a/app/views/lis/8/live/mortgaged/mortgage.html
+++ b/app/views/lis/8/live/mortgaged/mortgage.html
@@ -15,7 +15,7 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do you have a mortgage or loan secured on your home?
+    Do you pay a mortgage or loan on your home?
   </h1>
   <form action="mortgaged-handler" method="get" class="form">
 
