--- a/app/views/lis/8/partner/benefits/benefit4.html
+++ b/app/views/lis/8/partner/benefits/benefit4.html
@@ -13,8 +13,10 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Is your partner looking after someone but can’t get carers allowance because of another benefit?
+        Does your partner look after someone but cannot Carer’s Allowance because of another reason?
       </h1>
+      
+      <p>The other reason could be because of another benefit or a pension.</p>
   
       <form action="" method="get" class="form">
           <div class="form-item-wrapper">
@@ -38,7 +40,7 @@
 
         {{
           form_macros.button({
-            href: 'benefit5',
+            href: 'partner-careallowance',
             label: 'Save and continue'
           })
         }}
