--- a/app/views/lis/8/partner/full.html
+++ b/app/views/lis/8/partner/full.html
@@ -23,7 +23,7 @@
         <td><a href="partner">Change this</a></td>
       </table>
         <table class="data-table you-summary">
-        <p><strong>About your partner</strong></p>
+        <p><strong>Partner's personal details</strong></p>
       <tr>
         <td>Your partner's name</td>
         <td>Priya Mattu</td>
@@ -45,8 +45,8 @@
         <td><a href="hospital">Change this</a></td>
       </tr>
       </table>
-            <table class="data-table you-summary">
-        <p><strong>Priya's work and education</strong></p>
+        <table class="data-table you-summary">
+        <p><strong>Partners's work and education</strong></p>
       <tr>
         <td>Does your partner have a job?</td>
         <td>No</td>
@@ -59,7 +59,7 @@
       </tr>
       </table>
     <table class="data-table you-summary">
-        <p><strong>Priya's pension(s)</strong></p>
+        <p><strong>Partner's pension(s)</strong></p>
       <tr>
         <td>Does your partner receive a pension?</td>
         <td>Yes</td>
@@ -81,7 +81,7 @@
       </tr>
       </table>
         <table class="data-table you-summary">
-        <p><strong>Priya's benefits</strong></p>
+        <p><strong>Partner's benefits and other money</strong></p>
         <tr>
         <td>Benefits your partner recieves</td>
         <td>They do not receive <br>any of these</td>
@@ -95,11 +95,8 @@
       <tr>
         <td>Does anyone receive carers allowance for looking after your partner?</td>
         <td>No</td>
-        <td><a href="benefits/benefit5">Change this</a></td>
+        <td><a href="benefits/care-allowance">Change this</a></td>
       </tr>
-      </table>
-            <table class="data-table you-summary">
-        <p><strong>Priya's other money</strong></p>
       <tr>
         <td>Does your partner receive any other money?</td>
         <td>No</td>
