--- a/app/views/lis/8/partner/pension/pension-amount.html
+++ b/app/views/lis/8/partner/pension/pension-amount.html
@@ -13,11 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    About your partner's state pension
+   How often does your partner get their State Pension?
   </h1>
-  
-  <h2 class="heading-medium">How often does your partner receive their state pension payments?</h2>
-  
+
   <form action="sp-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
