--- a/app/views/lis/8/partner/pension/pension-credit.html
+++ b/app/views/lis/8/partner/pension/pension-credit.html
@@ -13,8 +13,11 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Does your partner receive Pension Credit Savings Credit?
+      Does your partner get Pension Credit Savings Credit?
   </h1>
+      
+      <p>This is an extra payment for people who saved some money towards their
+retirement. It is up to £13.07 (for single people) or £14.75 (for couples) a week.</p>
 
   <form action="pencred-handler6" method="get" class="form">
     <div class="form-item-wrapper">
