--- a/app/views/lis/8/partner/pension/private-pension-amount.html
+++ b/app/views/lis/8/partner/pension/private-pension-amount.html
@@ -13,11 +13,8 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    About your partner's private pension
-  </h1>
-  
-  <h2 class="heading-medium">How often does your partner receive their private pension payments?</h2>
-  
+How often does your partner get their private pension payments?  </h1>
+    
   <form action="pp-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
