--- a/app/views/lis/8/partner/work.html
+++ b/app/views/lis/8/partner/work.html
@@ -16,8 +16,15 @@
         Does your partner have a job?
       </h1>
       
-      <p class="form-hint">Include work for an employer, self employed work, and paid voluntary or charity work.</p>
-      
+
+      <p>They have a job if they:</p>
+
+      <ul class="list list-bullet">
+        <li>work for an employer</li>
+        <li>are selfemployed</li>
+        <li>get paid for voluntary or charity work</li>
+      </ul>
+            
       <form action="pwork-handler" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
