--- a/app/views/lis/8/you/about-you-summary.html
+++ b/app/views/lis/8/you/about-you-summary.html
@@ -47,7 +47,7 @@
       <tr>
           </table>
       
-      <p><strong>Work and education</strong></p>
+      <p><strong>Jobs and education</strong></p>
           <table class="data-table you-summary">
               <tr>
         <td>
@@ -104,7 +104,7 @@
       <tr>
         <td>Are you looking after someone but can’t get carers allowance because of another benefit?</td>
         <td>No</td>
-        <td><a href="benefits/benefit5">Change this</a></td>
+        <td><a href="benefits/care-allowance">Change this</a></td>
       </tr>
       <tr>
         <td>Does someone other than your partner get carers allowance for looking after you?</td>
