--- a/app/views/lis/8/you/benefits/care-allowance.html
+++ b/app/views/lis/8/you/benefits/care-allowance.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Does someone other than your partner get carers allowance for looking after you?
+        Does someone {{otherthanpartner}} get Carer’s Allowance for looking after you?
       </h1>
   
       <form action="" method="get" class="form">
