--- a/app/views/lis/8/you/benefits/dla.html
+++ b/app/views/lis/8/you/benefits/dla.html
@@ -37,25 +37,25 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do you receive?
+            Which weekly rate do you get?
           </label>
           <br>
           <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Low rate (£21.80)
+              Lowest (£21.80)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="middle" name="contact">
             <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Middle rate (£55.10)
+              Middle (£55.10)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="high" name="contact">
             <label class="form-control-radio js-toggle" for="high" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              High rate (£82.30)
+              Highest (£82.30)
             </label>
           </div>
 
