--- a/app/views/lis/8/assets/property.html
+++ b/app/views/lis/8/assets/property.html
@@ -15,9 +15,11 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do {{partnerortext}} have any property or land in this country or abroad?
-    <span class="form-hint">Do not include the house where you live</span>
+    Do {{partnerortext}} own any property or land?
   </h1>
+      
+  <p>Do not include where you live. The property or land can be in the United Kingdom
+or overseas.</p>
 
   <form action="land-handler" method="get" class="form">
 
