--- a/app/views/lis/8/live/joint-tenant.html
+++ b/app/views/lis/8/live/joint-tenant.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Is anyone else other than your partner a joint tenant of the place you live?
+    Is anyone else other than your partner a joint tenant of the rented accommodation where you live?
   </h1>
   
   <form action="" method="get" class="form">
