--- a/app/views/lis/8/live/rent-amount.html
+++ b/app/views/lis/8/live/rent-amount.html
@@ -10,67 +10,46 @@
 <main id="content" role="main">
   
   <div class="grid-row">
+    
     <div class="column-two-thirds">
 
-  <h1 class="heading-large">
-    About your rent
-  </h1>
-  
-  <h2 class="heading-medium">How often do you pay your rent?</h2>
-  
-  <form action="" method="get" class="form">
+      <h1 class="heading-large">
+        How much do you pay?
+      </h1>
 
-    <div class="form-item-wrapper">
-      <div class="form-group">
-        <input type="radio" id="week" name="minor">
-        <label class="form-control-radio" for="week">
-          Every week
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="radio" id="fortnight" name="minor">
-        <label class="form-control-radio" for="fortnight">
-          Every two weeks
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="radio" id="fourweekly" name="minor">
-        <label class="form-control-radio" for="fourweekly">
-         Every four weeks
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="radio" id="month" name="minor">
-        <label class="form-control-radio" for="month">
-         Every month
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="radio" id="year" name="minor">
-        <label class="form-control-radio" for="year">
-          Annually
-        </label>
-      </div>
+      <p>
+        Take off housing benefit or local housing allowance if you get it.
+      </p>
       
-      {{
-        form_macros.amount_field({
-          id: 'money-amount',
-        label: 'How much do you pay? <span class="form-hint">Take off housing benefit or local housing allowance if you get it.<br>Dont include water rates, council tax or any arrears.</span>'
-        })
-      }}
+      <p>
+        Do not include water rates, council tax or any arrears.
+      </p>
 
-    </div>  
-        
-    {{
-      form_macros.button({
-        href: 'rent-includes',
-        label: 'Save and continue'
-      })
-    }}
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
-  </form>
+      <form action="" method="get" class="form">
+
+        <div class="form-item-wrapper">
+          {{
+            form_macros.amount_field({
+              id: 'money-amount'
+            })
+          }}
+        </div>  
+
+        {{
+          form_macros.button({
+            href: 'rent-includes',
+            label: 'Save and continue'
+          })
+        }}
+
+      </form>
+
+      <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+
     </div>
-    </div>
+    
+  </div>
+  
 </main>
 
 {% endblock %}
