--- a/app/views/lis/8/live/rent-frequency.html
+++ b/app/views/lis/8/live/rent-frequency.html
@@ -1,4 +1,4 @@
- {% extends 'templates/nhs_transaction_layout.html' %}
+{% extends 'templates/nhs_transaction_layout.html' %}
 {% import 'includes/form_macros.html' as form_macros %}
 
 {% block afterHeader %}
@@ -13,10 +13,10 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    How often does your partner get their workplace pension payments?
+    How often do you pay your rent?
   </h1>
-    
-  <form action="ep-handler" method="get" class="form">
+  
+  <form action="" method="get" class="form">
 
     <div class="form-item-wrapper">
       <div class="form-group">
@@ -28,65 +28,37 @@
       <div class="form-group">
         <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio" for="fortnight">
-          Every two weeks
+          Every 2 weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="fourweekly" name="minor">
         <label class="form-control-radio" for="fourweekly">
-          Every four weeks
+         Every 4 weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="month" name="minor">
         <label class="form-control-radio" for="month">
-         Every month
+         Every calendar month
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="year" name="minor">
         <label class="form-control-radio" for="year">
-          Annually
+          Once a year
         </label>
       </div>
       
-    {{
-      form_macros.amount_field({
-        id: 'money-amount',
-        label: 'How much do they receive?'
-      })
-    }}
-
     </div>  
-    
- <div class="form-item-wrapper">
-            <fieldset>
-                <h2 class="heading-medium">Do they have another employment pension?</h2>
-
-              <div class="inline-form-groups">
-                <div class="form-group">
-                  <input type="radio" id="binary-yes" name="pension" value="yes">
-                  <label class="form-control-radio" for="binary-yes">
-                    Yes
-                  </label>
-                </div>
-                <div class="form-group">
-                  <input type="radio" id="binary-no" name="pension" value="no">
-                  <label class="form-control-radio" for="binary-no">
-                    No
-                  </label>
-                </div>
-              </div>
-            </fieldset>
-          </div>    
-    
+        
     {{
       form_macros.button({
-        href: '../benefits/benefit-sprint3',
+        href: 'rent-amount',
         label: 'Save and continue'
       })
     }}
-    <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
   </form>
     </div>
     </div>
