--- a/app/views/lis/8/partner/benefits/dla.html
+++ b/app/views/lis/8/partner/benefits/dla.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Does your partner receive the care component of disability living allowance?
+    Does your partner get the care component of Disability Living Allowance?
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
@@ -37,25 +37,25 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do they receive?
+            Which weekly rate do they get?
           </label>
           <br>
           <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Low rate
+              Lowest (£21.80)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="middle" name="contact">
             <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Middle rate
+              Middle (£55.10)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="high" name="contact">
             <label class="form-control-radio js-toggle" for="high" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              High rate
+              Highest (£82.30)
             </label>
           </div>
 
