--- a/app/views/lis/8/partner/benefits/mobility-component.html
+++ b/app/views/lis/8/partner/benefits/mobility-component.html
@@ -12,13 +12,13 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-        Does your partner receive the mobility component of disability living allowance?
+        Does your partner get the mobility component of Disability Living Allowance?
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
       
   <form action="" method="get" class="form">
-<div class="form-item-wrapper">
+    <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
           <div class="form-group">
@@ -37,25 +37,19 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do they receive?
+            Which rate do they get?
           </label>
           <br>
           <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Low rate
-            </label>
-          </div>
-          <div class="form-group">
-            <input type="radio" id="middle" name="contact">
-            <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Middle rate
+              Lower (£21.80)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="high" name="contact">
             <label class="form-control-radio js-toggle" for="high" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              High rate
+              High (£57.45)
             </label>
           </div>
 
