--- a/app/views/lis/8/partner/pension/pension.html
+++ b/app/views/lis/8/partner/pension/pension.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Does your partner receive a pension?
+        Does your partner get a pension?
       </h1>
   
       <form action="pension-handler" method="get" class="form">
