--- a/app/views/lis/8/you/benefits/benefit4.html
+++ b/app/views/lis/8/you/benefits/benefit4.html
@@ -13,9 +13,11 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Are you looking after someone but can’t get carers allowance because of another benefit?
+        Do you look after someone but cannot Carer’s Allowance because of another reason?
       </h1>
   
+      <p>The other reason could be because of another benefit or a pension.</p>
+      
       <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
@@ -38,7 +40,7 @@
 
         {{
           form_macros.button({
-            href: 'benefit5',
+            href: 'care-allowance',
             label: 'Save and continue'
           })
         }}
