--- a/app/views/lis/8/you/benefits/other-money.html
+++ b/app/views/lis/8/you/benefits/other-money.html
@@ -13,10 +13,17 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Do you receive any other money?
+        Do you get any other money?
       </h1>
-      <p class="form-hint">This could include money from a trust fund, vouchers or money from a charity or voluntary organisation</p>
-  
+      
+      <p>This could include money from:</p>
+      
+      <ul class="list list-bullet">
+        <li>a trust fund</li>
+        <li>vouchers</li>
+        <li>a charity or voluntary organisation</li>
+      </ul>
+
       <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
