updated the where do you live section

--- a/app/views/lis/8/live/adapted.html
+++ b/app/views/lis/8/live/adapted.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do you have a loan to adapt your home for the special needs of a disabled person?
+    Do you have a loan to adapt your home for the needs of a disabled person?
   </h1>
   
   <form action="" method="get" class="form">
