--- a/app/views/lis/8/live/ground-rent.html
+++ b/app/views/lis/8/live/ground-rent.html
@@ -15,6 +15,12 @@
   <h1 class="heading-large">
     Do you pay ground rent?
   </h1>  
+      
+  <p>
+    Ground rent is paid by the owner of a building to whoever owns the land the
+building is on.
+  </p>  
+      
   <form action="" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
