--- a/app/views/lis/8/live/others/boarder-includes.html
+++ b/app/views/lis/8/live/others/boarder-includes.html
@@ -13,9 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Does it include any of the following?
+      What is included in the rent?
   </h1>
-      <p>Tick all that apply</p>
+      <p>Select everything that is included in the rent.</p>
 
   <form action="" method="get" class="form">
     <div class="form-item-wrapper">
