--- a/app/views/lis/8/live/others/boarder.html
+++ b/app/views/lis/8/live/others/boarder.html
@@ -14,9 +14,10 @@
 
       <h1 class="heading-large">
         Are they a boarder or lodger?
-        <span class="form-hint">Do not count them as a boarder or lodger if they live with you as part of your family.</span>
       </h1>
-  
+      
+      <p>Do not count them as a boarder or lodger if they live with you as part of your family.</p>
+      
       <form action="boarder-handler" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
