--- a/app/views/lis/8/live/others/people-list.html
+++ b/app/views/lis/8/live/others/people-list.html
@@ -16,8 +16,9 @@
     {{partnerlivetext}}
   </h1>
     
-  <p class="form-hint">People you have already told us about:</p>
-      <ul class="list" id="people-list">
+  <p>You have already told us about:</p>
+      
+      <ul class="list">
         <li>{{peoplelist}}</li>
       </ul>
     
