--- a/app/views/lis/8/live/rent-includes.html
+++ b/app/views/lis/8/live/rent-includes.html
@@ -13,9 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Does your rent include any of the following?
+      Does your rent include any of the following costs?
   </h1>
-      <p>Tick all that apply</p>
+      <p>Select all other costs your rent includes</p>
 
   <form action="" method="get" class="form">
     <div class="form-item-wrapper">
