--- a/app/views/lis/8/live/services.html
+++ b/app/views/lis/8/live/services.html
@@ -13,10 +13,10 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Do you pay any of the following service charges where you live?
+      Do you pay any service charges where you live?
   </h1>
       
-      <p>Tick all that apply</p>
+      <p>Select all service charges you pay</p>
 
   <form action="" method="get" class="form">
     <div class="form-item-wrapper">
@@ -48,7 +48,7 @@
       <div class="form-group">
         <input type="checkbox" id="none" name="services">
         <label class="form-control-checkbox" for="none">
-          I do not pay for any of these things
+          I <span class="strong">do not</span> pay for any of these service charges
         </label>
       </div>
     {{
