--- a/app/views/lis/8/live/tax-amount.html
+++ b/app/views/lis/8/live/tax-amount.html
@@ -13,62 +13,16 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    About your council tax
+    How much council tax do you pay[every month]?
   </h1>
-  
-  <h2 class="heading-medium">How often do you pay your council tax?</h2>
-  
+    
   <form action="" method="get" class="form">
-
-    <div class="form-item-wrapper">
-      <!--div class="form-group">
-        <input type="radio" id="week" name="minor">
-        <label class="form-control-radio js-toggle" for="week" data-hide="#tax-months">
-          Every week
-        </label>
-      </div-->
-      <!--div class="form-group">
-        <input type="radio" id="fortnight" name="minor">
-        <label class="form-control-radio js-toggle" for="fortnight" data-hide="#tax-months">
-          Every two weeks
-        </label>
-      </div-->
-      <!--div class="form-group">
-        <input type="radio" id="fourweekly" name="minor">
-        <label class="form-control-radio js-toggle" for="fourweekly" data-hide="#tax-months">
-         Every four weeks
-        </label>
-      </div-->
-      <div class="form-group">
-        <input type="radio" id="year" name="minor">
-        <label class="form-control-radio js-toggle" for="year" data-hide="#tax-months">
-          Annually
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="radio" id="month" name="minor">
-        <label class="form-control-radio js-toggle" for="month" data-show="#tax-months">
-         Every month
-        </label>
-      </div>
       
     {{
       form_macros.amount_field({
-        id: 'money-amount',
-        label: 'How much do you pay?'
+        id: 'money-amount'
       })
     }}
-
-      <div class="js-hidden" id="tax-months">
-          {{
-            form_macros.text_field({
-              id: 'tax-months',
-              label: 'How many months do you pay over?'
-            })
-          }}
-        </div>
-
-    </div>  
         
     {{
       form_macros.button({
