--- a/app/views/lis/8/assets/accounts.html
+++ b/app/views/lis/8/assets/accounts.html
@@ -13,8 +13,8 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Do {{partnerortext}} have any of the following in this country or abroad?
-        <span class="form-hint">Tick all that apply</span>
+        Do {{partnerortext}} have any of these accounts or investments?
+        <span class="form-hint">Select all the accounts or investments you have.</span>
       </h1>
       
   <form action="account-type-handler" method="get" class="form">
@@ -22,19 +22,19 @@
       <div class="form-group">
         <input type="checkbox" id="bank" name="banktype" value="bank">
         <label class="form-control-checkbox" for="bank">
-          Bank accounts, building society accounts, savings accounts or ISA's
+          Bank, building society, savings accounts or ISAs
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="pb" name="banktype" value="pb">
         <label class="form-control-checkbox" for="pb">
-          Premium bonds
+          Premium Bonds
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="cp" value="cp" name="banktype">
         <label class="form-control-checkbox" for="cp">
-          Capital bonds
+          Capital Bonds
         </label>
       </div>
       <div class="form-group">
