--- a/app/views/lis/8/assets/bank.html
+++ b/app/views/lis/8/assets/bank.html
@@ -15,8 +15,8 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    What is the total amount {{partnerandtext}} have in bank, building society or savings accounts?
-    <span class="form-hint">Please tell us the combined amount from all of the accounts you have</span>
+    How much do {{partnerandtext}} have in all of your bank, building society, savings accounts and
+ISAs?
   </h1>
 
   <form action="bank-savings-handler" method="get" class="form">
