--- a/app/views/lis/8/assets/outstanding.html
+++ b/app/views/lis/8/assets/outstanding.html
@@ -1,4 +1,4 @@
- {% extends 'templates/nhs_transaction_layout.html' %}
+{% extends 'templates/nhs_transaction_layout.html' %}
 {% import 'includes/form_macros.html' as form_macros %}
 
 {% block afterHeader %}
@@ -10,46 +10,36 @@
 <main id="content" role="main">
     
   <div class="grid-row">
+    
     <div class="column-two-thirds">
 
-  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
-
-  <h1 class="heading-large">
-       Do {{partnerortext}} pay a mortgage on the property or land?
-  </h1>
+      <h1 class="heading-large">
+       How much is left on the mortgage?
+      </h1>
       
-  <form action="secondprop-handler" method="get" class="form">
-
-    <div class="form-item-wrapper">
-      <fieldset>
-        <div class="inline-form-groups">
-          <div class="form-group">
-            <input type="radio" id="yes" name="property" value="yes">
-            <label class="form-control-radio" for="yes">
-              Yes
-            </label>
-          </div>
-          <div class="form-group">
-            <input type="radio" id="no" name="property" value="no">
-            <label class="form-control-radio" for="no">
-              No
-            </label>
-          </div>
+      <form action="" method="get" class="form">
+        <div class="form-item-wrapper">
+          {{
+            form_macros.amount_field({
+              id: 'money-amount'
+            })
+          }}
+        </div>
+        <div class="form-item-wrapper">
+          {{
+            form_macros.button({
+              label: 'Save and continue',
+              href: 'other-property'
+            })
+          }}
         </div>
 
-    {{
-      form_macros.button({
-        label: 'Save and continue'
-      })
-    }}
-    
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+      </form>
+          <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
 
-  </form>
-      
   </div>
     
-  </div>
+</div>
   
 </main>
 
