--- a/app/views/lis/8/assets/value.html
+++ b/app/views/lis/8/assets/value.html
@@ -29,7 +29,7 @@
           {{
             form_macros.button({
               label: 'Save and continue',
-              href: 'outstanding'
+              href: 'assets-mortgage'
             })
           }}
         </div>
