--- a/app/views/lis/8/assets/accounts.html
+++ b/app/views/lis/8/assets/accounts.html
@@ -14,8 +14,9 @@
 
       <h1 class="heading-large">
         Do {{partnerortext}} have any of these accounts or investments?
-        <span class="form-hint">Select all the accounts or investments you have.</span>
       </h1>
+      
+      <p>Select all the accounts or investments you have.</p>
       
   <form action="account-type-handler" method="get" class="form">
     <div class="form-item-wrapper">
@@ -65,7 +66,7 @@
       <div class="form-group">
         <input type="checkbox" id="none" value="none" name="banktype">
         <label class="form-control-checkbox" for="none">
-          I do not have any of these
+          I <span class ="bold">do not</span> have any of these
         </label>
       </div>
 
