--- a/app/views/lis/8/live/tax-frequency.html
+++ b/app/views/lis/8/live/tax-frequency.html
@@ -28,13 +28,13 @@
       <!--div class="form-group">
         <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio js-toggle" for="fortnight" data-hide="#tax-months">
-          Every two weeks
+          Every 2 weeks
         </label>
       </div-->
       <!--div class="form-group">
         <input type="radio" id="fourweekly" name="minor">
         <label class="form-control-radio js-toggle" for="fourweekly" data-hide="#tax-months">
-         Every four weeks
+         Every 4 weeks
         </label>
       </div-->
       <div class="form-group">
