--- a/app/views/lis/8/wizard/long-term-medical-condition.html
+++ b/app/views/lis/8/wizard/long-term-medical-condition.html
@@ -84,7 +84,7 @@ Do you have a long-term medical condition?
       <div class="form-group">
         <input type="radio" id="continue" name="kickout" value="continue">
         <label class="form-control-radio" for="continue">
-          I do not have any of these conditions
+          I <span class ="bold">do not</span> have any of these conditions
         </label>
       </div>
       </div>
