--- a/app/views/lis/8/you/benefits/benefit4.html
+++ b/app/views/lis/8/you/benefits/benefit4.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Do you look after someone but cannot Carer’s Allowance because of another reason?
+        Do you look after someone but cannot get Carer’s Allowance because of another reason?
       </h1>
   
       <p>The other reason could be because of another benefit or a pension.</p>
