--- a/app/views/lis/8/you/pension/war-widow-pension.html
+++ b/app/views/lis/8/you/pension/war-widow-pension.html
@@ -29,19 +29,19 @@
         <div class="form-group">
           <input type="radio" id="fortnight" name="minor">
           <label class="form-control-radio" for="fortnight">
-            Every two weeks
+            Every 2 weeks
           </label>
         </div>
         <div class="form-group">
           <input type="radio" id="fourweekly" name="minor">
           <label class="form-control-radio" for="fourweekly">
-            Every four weeks
+            Every 4 weeks
           </label>
         </div>
         <div class="form-group">
           <input type="radio" id="month" name="minor">
           <label class="form-control-radio" for="month">
-           Every month
+           Every calender month
           </label>
         </div>
         <div class="form-group">
