--- a/app/views/lis/8/assets/outstanding.html
+++ b/app/views/lis/8/assets/outstanding.html
@@ -29,7 +29,7 @@
           {{
             form_macros.button({
               label: 'Save and continue',
-              href: 'other-property'
+              href: 'list'
             })
           }}
         </div>
