--- a/app/views/lis/8/partner/pension/employment-pension-amount.html
+++ b/app/views/lis/8/partner/pension/employment-pension-amount.html
@@ -28,25 +28,25 @@
       <div class="form-group">
         <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio" for="fortnight">
-          Every two weeks
+          Every 2 weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="fourweekly" name="minor">
         <label class="form-control-radio" for="fourweekly">
-          Every four weeks
+          Every 4 weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="month" name="minor">
         <label class="form-control-radio" for="month">
-         Every month
+         Every calendar month
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="year" name="minor">
         <label class="form-control-radio" for="year">
-          Annually
+          Once a year
         </label>
       </div>
       
@@ -61,7 +61,7 @@
     
  <div class="form-item-wrapper">
             <fieldset>
-                <h2 class="heading-medium">Do they have another employment pension?</h2>
+                <h2 class="heading-medium">Do they have another workplace pension?</h2>
 
               <div class="inline-form-groups">
                 <div class="form-group">
