--- a/app/views/lis/8/partner/pension/private-pension-amount.html
+++ b/app/views/lis/8/partner/pension/private-pension-amount.html
@@ -27,19 +27,19 @@ How often does your partner get their private pension payments?  </h1>
       <div class="form-group">
         <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio" for="fortnight">
-          Every two weeks
+          Every 2 weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="fourweekly" name="minor">
         <label class="form-control-radio" for="fourweekly">
-          Every four weeks
+          Every 4 weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="month" name="minor">
         <label class="form-control-radio" for="month">
-         Every month
+         Every calender month
         </label>
       </div>
       <div class="form-group">
