--- a/app/views/lis/8/wizard/passported-benefits.html
+++ b/app/views/lis/8/wizard/passported-benefits.html
@@ -60,7 +60,7 @@
       <div class="form-group">
         <input type="radio" id="continue" name="kickout" value="continue">
         <label class="form-control-radio" for="continue">
-          I do not receive any of these
+          I <span class ="bold">do not</span> receive any of these
         </label>
       </div>
     {{
