--- a/app/views/lis/8/you/benefits/ctc.html
+++ b/app/views/lis/8/you/benefits/ctc.html
@@ -30,7 +30,7 @@
       <div class="form-group">
         <input type="radio" id="month" name="ctc">
         <label class="form-control-radio" for="month">
-         Every four weeks
+         Every 4 weeks
         </label>
       </div>
       
