--- a/app/views/lis/8/you/pension/pension-amount.html
+++ b/app/views/lis/8/you/pension/pension-amount.html
@@ -29,25 +29,25 @@
         <!--div class="form-group">
           <input type="radio" id="fortnight" name="freq">
           <label class="form-control-radio" for="fortnight">
-            Every two weeks
+            Every 2 weeks
           </label>
         </div-->
         <div class="form-group">
           <input type="radio" id="fourweekly" value="fourweekly" name="frequency">
           <label class="form-control-radio" for="fourweekly">
-            Every four weeks
+            Every 4 weeks
           </label>
         </div>
         <!--div class="form-group">
           <input type="radio" id="month" name="freq">
           <label class="form-control-radio" for="month">
-           Every month
+           Every calender month
           </label>
         </div-->
         <!--div class="form-group">
           <input type="radio" id="year" name="freq">
           <label class="form-control-radio" for="year">
-            Annually
+            Once a year
           </label>
         </div-->
       </div> 
